src/objects/Promocode__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promocodes</relationshipLabel>
        <relationshipName>Promocodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promocode_Description__c</fullName>
        <label>Promocode Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promotions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotions</label>
        <referenceTo>Promotions__c</referenceTo>
        <relationshipLabel>Promocodes</relationshipLabel>
        <relationshipName>Promocodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Promocode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Promocode_Description__c</columns>
        <columns>Promotions__c</columns>
        <columns>IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Custom_View</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Promotions__c</columns>
        <columns>Promocode_Description__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>Custom View</label>
    </listViews>
    <listViews>
        <fullName>New_Promo_Code</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Promocode_Description__c</columns>
        <columns>Promotions__c</columns>
        <columns>IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New Promo Code</label>
    </listViews>
    <listViews>
        <fullName>Support_View</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Promotions__c</columns>
        <columns>Promocode_Description__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Promocode_Description__c</field>
            <operation>contains</operation>
            <value>99</value>
        </filters>
        <label>Support View</label>
    </listViews>
    <nameField>
        <label>Promocode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promocodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>